objects/ReturnItemsApprovalMatrix__c.object
<CustomObject>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release: MAY2013_RR</description>
        <label>End User Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Return Items Approval Matrices</relationshipLabel>
        <relationshipName>Return_Items_Approval_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddChangeProduct__c</fullName>
        <formula>HYPERLINK(&apos;/apex/VFP_AddRIAMProduct?ID=&apos; + Id  +&apos;&amp;Mode=chp&apos; , &apos;[Change Product]&apos; ,&apos;_top&apos;)</formula>
        <label>&lt;AddChangeProduct&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverLevel1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>I2P-RR: MAY2013 RELEASE</description>
        <label>Approver Level1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_Items_Approval_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApproverLevel2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>I2P-RR: MAY2013 RELEASE</description>
        <label>Approver Level2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_Items_Approval_Matrices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <inlineHelpText>I2P: Oct2014 Release</inlineHelpText>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Release: May2013 RR</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Selection &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Pricing and Availability</fullName>
                </value>
                <value>
                    <fullName>Quotation Request</fullName>
                </value>
                <value>
                    <fullName>Order Booking</fullName>
                </value>
                <value>
                    <fullName>Order Inquiry</fullName>
                </value>
                <value>
                    <fullName>Order Modification</fullName>
                </value>
                <value>
                    <fullName>Delivery or Collection Issues*</fullName>
                </value>
                <value>
                    <fullName>Installation / Setup</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting*</fullName>
                </value>
                <value>
                    <fullName>Additional Documentation Request</fullName>
                </value>
                <value>
                    <fullName>Documentation Missing or Incorrect*</fullName>
                </value>
                <value>
                    <fullName>Others*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommercialReference__c</fullName>
        <label>Commercial Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerResolution__c</fullName>
        <label>Customer Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AXN + TEX</fullName>
                </value>
                <value>
                    <fullName>AXR + TEX</fullName>
                </value>
                <value>
                    <fullName>RFC + TEX</fullName>
                </value>
                <value>
                    <fullName>REP + TEX</fullName>
                </value>
                <value>
                    <fullName>AXN</fullName>
                </value>
                <value>
                    <fullName>RET</fullName>
                </value>
                <value>
                    <fullName>RFC</fullName>
                </value>
                <value>
                    <fullName>REP</fullName>
                </value>
                <value>
                    <fullName>AXR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>I2P: Oct 2014 Release</description>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <description>I2P: Oct2014 Release</description>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>Release: May2013 - RR</description>
        <label>Product Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>I2P: Oct2014 Release</description>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <description>I2P: Oct2014 Release</description>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSuccession__c</fullName>
        <description>I2P: Oct2014 Release</description>
        <label>Product Succession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Release: May2013 - RR</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Application Assistance</fullName>
                </value>
                <value>
                    <fullName>Catalog Selection</fullName>
                </value>
                <value>
                    <fullName>Competitive Cross Reference</fullName>
                </value>
                <value>
                    <fullName>Legacy Cross Reference</fullName>
                </value>
                <value>
                    <fullName>Product Characteristics</fullName>
                </value>
                <value>
                    <fullName>Service Offer Selection</fullName>
                </value>
                <value>
                    <fullName>Solution Configuration</fullName>
                </value>
                <value>
                    <fullName>Non-standard Offer</fullName>
                </value>
                <value>
                    <fullName>Standard Offer</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Delivery Address Modification</fullName>
                </value>
                <value>
                    <fullName>Delivery Release or Shipping Mode Modification</fullName>
                </value>
                <value>
                    <fullName>Order Line Delivery Split</fullName>
                </value>
                <value>
                    <fullName>Delivery before standard lead time</fullName>
                </value>
                <value>
                    <fullName>Part Number Modification</fullName>
                </value>
                <value>
                    <fullName>Delivery Date Postponed</fullName>
                </value>
                <value>
                    <fullName>Price Modification</fullName>
                </value>
                <value>
                    <fullName>Quantity Modification</fullName>
                </value>
                <value>
                    <fullName>Address Incorrect*</fullName>
                </value>
                <value>
                    <fullName>Carrier Delivery Service*</fullName>
                </value>
                <value>
                    <fullName>Delivered Earlier than Scheduled*</fullName>
                </value>
                <value>
                    <fullName>Delivery Instruction not Followed*</fullName>
                </value>
                <value>
                    <fullName>Incorrect Transportation Type Used*</fullName>
                </value>
                <value>
                    <fullName>Late Delivery, already Received*</fullName>
                </value>
                <value>
                    <fullName>Late Delivery, not Received Yet*</fullName>
                </value>
                <value>
                    <fullName>Labeling not Compliant*</fullName>
                </value>
                <value>
                    <fullName>Packaging not Compliant*</fullName>
                </value>
                <value>
                    <fullName>Parcel AND Product damaged*</fullName>
                </value>
                <value>
                    <fullName>Parcel damaged, products OK*</fullName>
                </value>
                <value>
                    <fullName>Product damaged, parcel OK*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RuleActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Release: May2013 - RR</description>
        <label>Rule Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubFamily__c</fullName>
        <description>I2P: Oct2014 Release</description>
        <label>Sub Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubReason__c</fullName>
        <description>Release: May2013 - RR</description>
        <label>Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Address Incorrect*</fullName>
                </value>
                <value>
                    <fullName>Application Assistance</fullName>
                </value>
                <value>
                    <fullName>Behaviour or Competence*</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Carrier Delivery Service*</fullName>
                </value>
                <value>
                    <fullName>Catalog Selection</fullName>
                </value>
                <value>
                    <fullName>Certificate of Origin</fullName>
                </value>
                <value>
                    <fullName>Certificate of Origin*</fullName>
                </value>
                <value>
                    <fullName>Commercial / Financial Invoice</fullName>
                </value>
                <value>
                    <fullName>Commercial / Financial Invoice*</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Competitive Cross Reference</fullName>
                </value>
                <value>
                    <fullName>Credit Memo / Note</fullName>
                </value>
                <value>
                    <fullName>Credit Memo / Note*</fullName>
                </value>
                <value>
                    <fullName>Customer Order Error</fullName>
                </value>
                <value>
                    <fullName>Delivered Earlier than Scheduled*</fullName>
                </value>
                <value>
                    <fullName>Delivery Address Modification</fullName>
                </value>
                <value>
                    <fullName>Delivery Date Postponed</fullName>
                </value>
                <value>
                    <fullName>Delivery Instruction not Followed*</fullName>
                </value>
                <value>
                    <fullName>Delivery Note / Packing List*</fullName>
                </value>
                <value>
                    <fullName>Delivery Release or Shipping Mode Modification</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>Discontinued/Old/Expired Product</fullName>
                </value>
                <value>
                    <fullName>Distributor Termination</fullName>
                </value>
                <value>
                    <fullName>Drawings / Factory Prints</fullName>
                </value>
                <value>
                    <fullName>End of Test and Trial</fullName>
                </value>
                <value>
                    <fullName>E-Selling / Web</fullName>
                </value>
                <value>
                    <fullName>General Correspondence</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Hardware Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_CustomerResolution__c</fullName>
        <label>Customer Resolution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AXN + TEX</fullName>
                </value>
                <value>
                    <fullName>AXR + TEX</fullName>
                </value>
                <value>
                    <fullName>RFC + TEX</fullName>
                </value>
                <value>
                    <fullName>REP + TEX</fullName>
                </value>
                <value>
                    <fullName>AXN</fullName>
                </value>
                <value>
                    <fullName>RET</fullName>
                </value>
                <value>
                    <fullName>RFC</fullName>
                </value>
                <value>
                    <fullName>REP</fullName>
                </value>
                <value>
                    <fullName>AXR</fullName>
                </value>
                <value>
                    <fullName>TEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_GMRCode__c</fullName>
        <description>Release: May2013 - RR</description>
        <label>TECH_GMRCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ProductFamilyGMRCode__c</fullName>
        <formula>TRIM(LEFT(TECH_GMRCode__c,  VALUE($Label.CLOCT14I2P03)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_ProductFamilyGMRCode</label>
        <type>Text</type>
    </fields>
    <label>Return Items Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountCountry__c</columns>
        <columns>TECH_CustomerResolution__c</columns>
        <columns>Category__c</columns>
        <columns>Reason__c</columns>
        <columns>CommercialReference__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>ApproverLevel1__c</columns>
        <columns>ApproverLevel2__c</columns>
        <columns>RuleActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Australia</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ProductFamily__c</columns>
        <columns>CommercialReference__c</columns>
        <columns>TECH_GMRCode__c</columns>
        <columns>Reason__c</columns>
        <columns>ApproverLevel1__c</columns>
        <columns>ApproverLevel2__c</columns>
        <columns>CustomerResolution__c</columns>
        <columns>TECH_CustomerResolution__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountCountry__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>AccountCountry__c</field>
            <operation>equals</operation>
            <value>New Zealand</value>
        </filters>
        <label>All_PZ</label>
        <language>en_US</language>
        <sharedTo>
            <group>PZ_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Morocco</fullName>
        <columns>NAME</columns>
        <columns>AccountCountry__c</columns>
        <columns>Category__c</columns>
        <columns>Reason__c</columns>
        <columns>SubReason__c</columns>
        <columns>CommercialReference__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>TECH_CustomerResolution__c</columns>
        <columns>ApproverLevel1__c</columns>
        <columns>ApproverLevel2__c</columns>
        <columns>RuleActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountCountry__c</field>
            <operation>equals</operation>
            <value>Morocco</value>
        </filters>
        <label>All - Morocco</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RIAM-{0000}</displayFormat>
        <label>Return Items Approval Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Items Approval Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RIAM_VR_MAY13RR01_CountryAndPFAndCRReqd</fullName>
        <active>true</active>
        <description>I2P-RR: MAY2013 - RELEASE</description>
        <errorConditionFormula>AND 
(
NOT($User.BypassVR__c) ,
RuleActive__c=True,
OR(ISBLANK(AccountCountry__c),ISNULL(AccountCountry__c)),
OR(ISBLANK(CommercialReference__c),ISNULL(CommercialReference__c)),
OR(ISBLANK(ProductFamily__c),ISNULL(ProductFamily__c))
)</errorConditionFormula>
        <errorMessage>Account Country and Commercial Reference / Product Family can&apos;t be blank at same time.</errorMessage>
    </validationRules>
</CustomObject>